# robot12

./: .gitignore  README  README.md  README.txt  milestone_0.txt
IRSensorCalibration/: calc_error.m  calc_gradient.m  calc_linear_error.m  calc_mbk_gradient.m  create_sample_points.m  find_e_function.m  find_linear_function.m  get_blub.m  test_find_e_function.m  test_linear_function.m
amee/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
amee/launch/: fakemotors.launch  milestone0.launch  milestone1.launch  milestone2.launch
amee/msg/: Encoder.msg  ExploringGridColumn.msg  ExploringGridVis.msg  FollowWallStates.msg  GraphMsg.msg  IRDistances.msg  KeyboardCommand.msg  MapVisualization.msg  MapperEvent.msg  Motor.msg  Movement.msg  NodeEvent.msg  NodeMsg.msg  NodeReached.msg  Odometry.msg  Path.msg  Pose.msg  Sonar.msg  StrategyCommand.msg  Tag.msg  Velocity.msg  WallVisualization.msg
amee/msg_gen/cpp/include/amee/: Velocity.h
amee/msg_gen/lisp/: Velocity.lisp  _package.lisp  _package_Velocity.lisp  amee-msg.asd
amee/nodes/: .MovementControl.py.swo  .MovementControl.py.swp  Doctor.py  Helpers.py  MapVisualizer.py  MotorController.py  MovementControl.py  OpenCVTest.py
amee/src/: Amee.cpp  Amee.h  IRSensorReader.cpp  IRSensorReader.h  MotorControl.cpp  MotorControl.h  MoveRotate.h  MoveStraight.cpp  MoveStraight.h  MovementControl.cpp  MovementControl.h  MovementStates.h  PublishAmee.h  key_handler.cpp  key_handler.h  key_handler_listener.cpp
amee/src/Camera/: CameraHack.cpp  CameraHack.h  CameraNode.cpp  Recorder.cpp  TagDetector.cpp  V4L2Camera.cc  V4L2Camera.hh
amee/src/Camera/tags/: files.txt
amee/src/Common/: RobotConstants.h
amee/src/Graph/: Graph.cpp  Graph.h  Makefile  Node.cpp  Node.h  PathFinderAlgo.cpp  PathFinderAlgo.h  TestGraphAlgo.cpp
amee/src/IMUSensor/: IMUReader.cpp
amee/src/IRSensor/: IRSensorReader.cpp  IRSensorReader.h
amee/src/KeyHandler/: key_handler.h  key_handler_listener.cpp  key_handler_listener.h
amee/src/Localize/: EKF.cpp  EKF.h  Localize.cpp  Localize.ekf.cpp  Localize.h
amee/src/Mapper/: ExploringGrid.cpp  ExploringGrid.h  HorizontalWallSegment.cpp  HorizontalWallSegment.h  HoriztonalWallSegment.cpp  Map.cpp  Map.h  Mapper.cpp  Mapper.h  TestUnexploredGrid.cpp  VerticalWallSegment.cpp  VerticalWallSegment.h  WallSegment.h  a.out  test.cpp
amee/src/MeasureAmee/: MeasureAmee.cpp
amee/src/MotorControl/: MotorControl.cpp  MotorControl.h
amee/src/MovementControl/: MoveAlignToFrontWall.cpp  MoveAlignToFrontWall.h  MoveAlignWall.cpp  MoveAlignWall.h  MoveCollisionRecovery.cpp  MoveCollisionRecovery.h  MoveCoordinate.cpp  MoveCoordinate.h  MoveFollowWall.cpp  MoveFollowWall.h  MoveRotate.cpp  MoveRotate.h  MoveStop.cpp  MoveStop.h  MoveStraight.cpp  MoveStraight.h  MovementControl.cpp  MovementControl.h  MovementState.h
amee/src/NodeKiller/: NodeKiller.cpp
amee/src/PublishAmee/: PublishAmee.cpp  PublishAmee.h
amee/src/SensorSync/: SensorSync.cpp
amee/src/SonarControl/: SonarControl.cpp  SonarControl.h
amee/src/SonarSensor/: SonarReader.cpp
amee/src/StrategyControl/: MotherBrain.cpp  PhaseOneControl.cpp  PhaseOneControl.h  PhaseTwoControl.cpp  PhaseTwoControl.h  StrategyClassify.cpp  StrategyClassify.h  StrategyControl.cpp  StrategyControl.h  StrategyExplore.cpp  StrategyExplore.h  StrategyGetOut.cpp  StrategyGetOut.h  StrategyGo2Tag.cpp  StrategyGo2Tag.h  StrategyGoTo.cpp  StrategyGoTo.h  StrategyRescue.cpp  StrategyRescue.h  StrategyState.h
amee/src/amee/msg/: _Velocity.py  __init__.py
data/: 2012-11-07-16-57-25.bag  2012-11-12-17-31-19.bag  2012-11-18-03-04-55.bag  good_recording_of_evil_maze.bag  ir_odometry_in_maze.bag  niclas_followWallState.bag  niclas_fullmaze.bag  niclas_maze_test.bag  phantom_wall1.bag  phantom_wall2.bag
deploy/: fabfile.py  scpToRobo0
docs/: ros_notes.txt
docs/final report/: .hardware.tex.swp  abstract.tex  bib.tex  computerVision.tex  conclusion.tex  evaluation.tex  futureWork.tex  hardware.tex  introduction.tex  main.tex  mapping.tex  motionControl.tex  path.tex  software.tex
docs/final report/figures/: Diagram1.dia  followWallStates_nice.graffle
lab1/: K_f.m  K_i.m  check_weld.p  generate_T.p  inv_kinematics_scara.p  jacobian.m  kinematics_scara.p  main.m  plot_scara3.p  rob_sim.p  valid_configuration.m
